<resources>
    <string name="app_name">Portfolio</string>
    <string name="project_popular_movies">Popular Movies</string>
    <string name="project_stock_hawk">Stock Hawk</string>
    <string name="project_build_it_bigger">Build it Bigger</string>
    <string name="project_make_your_app_material">Make Your App Material</string>
    <string name="project_go_ubiquitous">Go Ubiquitous</string>
    <string name="project_capstone">Capstone</string>
</resources>
