<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="maximbravo.com.portfolio.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:text="My Nanodegree Apps!" />

            <TextView
                android:id="@+id/project_popular_movies"
                style="@style/MainButton"
                android:text="@string/project_popular_movies" />

            <TextView
                android:id="@+id/project_stock_hawk"
                style="@style/MainButton"
                android:text="@string/project_stock_hawk" />

            <TextView
                android:id="@+id/project_build_it_bigger"
                style="@style/MainButton"
                android:text="@string/project_build_it_bigger" />

            <TextView
                android:id="@+id/project_make_your_app_material"
                style="@style/MainButton"
                android:text="@string/project_make_your_app_material" />

            <TextView
                android:id="@+id/project_go_ubiquitous"
                style="@style/MainButton"
                android:text="@string/project_go_ubiquitous" />

            <TextView
                android:id="@+id/project_capstone"
                style="@style/MainButton"
                android:text="@string/project_capstone" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>